# warper

./: Cargo.toml  README.md  WARP.md  warper-warnings.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml
app/: Cargo.toml  build.rs
app/src/: app_menus.rs  app_state.rs  changelog_model.rs  coding_panel_enablement_state.rs  crash_recovery.rs  debug_dump.rs  download_method.rs  lib.rs  modal.rs  palette.rs  profiling.rs  root_view.rs  session_management.rs  system.rs  tab.rs  wasm_nux_dialog.rs  window_settings.rs
crates/ai/: Cargo.toml
crates/graphql/: Cargo.toml
crates/graphql/src/: lib.rs  managed_secrets.rs
crates/graphql/src/api/: ai.rs  full_source_code_embedding.rs  mcp_gallery_template.rs  mod.rs
crates/graphql/src/api/queries/: mod.rs  rerank_fragments.rs  task_secrets.rs
crates/managed_secrets/: Cargo.toml
crates/onboarding/: Cargo.toml
crates/warp_core/: Cargo.toml
crates/warp_files/: Cargo.toml
crates/warp_logging/: Cargo.toml
crates/warp_server_client/: Cargo.toml
crates/warpui/: Cargo.toml
crates/warpui_core/: Cargo.toml
script/: check_warper_static_denylist  install_cargo_build_deps  install_cargo_bundle  prepare_bundled_resources  presubmit  prune_target_artifacts  run  update_plist  warper_app_help_smoke  warper_network_intercept_smoke  warper_offline_local_smoke  warper_openrouter_manual_verify  warper_terminal_session_network_smoke
script/linux/: bootstrap  bundle  bundle_appimage  bundle_arch  bundle_deb  bundle_rpm  install_test_deps  linuxdeploy-plugin-warp
script/macos/: bootstrap  bundle  run  (+1 more)
(+819 files in other folders)
