[package]
authors = ["Warp Team <dev@warp.dev>"]
edition = "2021"
name = "warp_graphql"
version = "0.1.0"
publish.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true

[features]
# Enables utilities for testing.
test-util = []
